# ntirpc

./: .gitignore  CMakeLists.txt
cmake/: maintainer_mode.cmake
ntirpc/lttng/: ntirpc_traces.h
ntirpc/misc/: abstract_atomic.h
ntirpc/rpc/: gss_internal.h  svc.h  xdr.h  xdr_ioq.h
src/: CMakeLists.txt  rpc_rdma.c  rpc_rdma.h  svc_auth_gss.c  svc_internal.h  svc_ioq.c  svc_rdma.c  svc_rqst.c  svc_vc.c  svc_xprt.c  xdr_ioq.c  xdr_mem.c  xdr_rdma.c
src/lttng/: CMakeLists.txt  lttng_defines.c  lttng_probes.c
src/lttng/generator/: .gitignore  CMakeLists.txt  ParsingError.h  README.md  StringLiteralTracepointArgument.h  TraceGenerator.h  TraceGeneratorSourceFileCallback.h  TracepointArgument.h  TracepointInfo.h  TracepointLocation.h  generate_cmake_rules.py  generate_combined_header.py  generate_lttng.cpp  generate_lttng.h  generate_lttng_for_files.cpp  generate_lttng_for_project.cpp  trace_formatter.py
src/lttng/generator/failure_tests/: test_code_failure_bad_fnc_format.c  test_code_failure_has_side_effects_func_call.c  test_code_failure_has_side_effects_func_expression.c  test_code_failure_has_side_effects_inc.c  test_code_failure_has_side_effects_volatile.c  test_code_failure_invalid_format1.c  test_code_failure_invalid_format2.c  test_code_failure_invalid_format3.c  test_code_failure_invalid_format4.c  test_code_failure_missing_log_format.c  test_code_failure_missing_log_level.c  test_code_failure_not_enough_arguments_for_format.c  test_code_failure_too_many_arguments.c  test_code_failure_too_many_arguments_for_format.c  test_code_failure_too_many_arguments_with_arrays.c  test_code_failure_unsupported_struct.c  test_code_failure_unsupported_typedef_struct.c  test_code_failure_unsupported_union.c  test_failures.py
src/lttng/generator/include/: lttng_generator.h
src/lttng/generator/test/: .gitignore  CMakeLists.txt  run_tests.sh  test_code-tp.c  test_code.c  test_code.h  test_code2.c  test_traces_output.sh
tests/: CMakeLists.txt  rpcping.c
